--- a/MemeMe/MemeMe/Base.lproj/Main.storyboard
+++ b/MemeMe/MemeMe/Base.lproj/Main.storyboard
@@ -166,10 +166,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="nZA-UM-ttp">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="hrg-T6-5YB">
-                                    <size key="itemSize" width="50" height="50"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="nZA-UM-ttp">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="2" id="hrg-T6-5YB">
+                                    <size key="itemSize" width="120" height="120"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -179,15 +179,17 @@
                                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MHh-I0-SYW">
-                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                    <rect key="frame" x="10" y="10" width="100" height="100"/>
                                                 </imageView>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
+                                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <size key="customSize" width="120" height="120"/>
                                         <connections>
                                             <outlet property="memeImage" destination="MHh-I0-SYW" id="q78-x4-qxg"/>
                                         </connections>
@@ -204,7 +206,13 @@
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="" image="Grid" id="86N-ag-Mbw"/>
-                    <navigationItem key="navigationItem" id="fJI-dI-dWn"/>
+                    <navigationItem key="navigationItem" id="fJI-dI-dWn">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Dtw-zg-P77" userLabel="Item">
+                            <connections>
+                                <segue destination="vXZ-lx-hvc" kind="presentation" id="4AC-Sb-cph"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="collectionView" destination="nZA-UM-ttp" id="MLy-PU-mrK"/>
                     </connections>
@@ -259,21 +267,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Mzr-1F-yxw">
-                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
-                                <items>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="ray-sI-W7B"/>
-                                    <barButtonItem title="Sent Memes" id="Aoy-OD-DiQ">
-                                        <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                    </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="qsH-m0-fpB"/>
-                                    <barButtonItem systemItem="add" id="520-yh-rYf">
-                                        <connections>
-                                            <segue destination="vXZ-lx-hvc" kind="presentation" id="uqU-th-lsk"/>
-                                        </connections>
-                                    </barButtonItem>
-                                </items>
-                            </toolbar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="EvH-dJ-dsZ">
                                 <rect key="frame" x="0.0" y="20" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -292,16 +285,18 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Mzr-1F-yxw" firstAttribute="leading" secondItem="nsw-zi-548" secondAttribute="leadingMargin" constant="-16" id="1YF-k4-Y1D"/>
-                            <constraint firstItem="EvH-dJ-dsZ" firstAttribute="top" secondItem="Mzr-1F-yxw" secondAttribute="bottom" id="1n6-HJ-tzF"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Mzr-1F-yxw" secondAttribute="trailing" constant="-16" id="N8N-9J-q8n"/>
                             <constraint firstAttribute="trailingMargin" secondItem="EvH-dJ-dsZ" secondAttribute="trailing" constant="-16" id="UzW-Z1-aoa"/>
-                            <constraint firstItem="Mzr-1F-yxw" firstAttribute="top" secondItem="YeZ-D9-jKT" secondAttribute="bottom" id="glG-uK-BgB"/>
                             <constraint firstItem="EvH-dJ-dsZ" firstAttribute="leading" secondItem="nsw-zi-548" secondAttribute="leadingMargin" constant="-16" id="nXs-yJ-bYA"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="" image="Table" id="QZM-jo-KJP"/>
-                    <navigationItem key="navigationItem" id="LO5-wJ-oop"/>
+                    <navigationItem key="navigationItem" id="LO5-wJ-oop">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="FWS-F8-aVc">
+                            <connections>
+                                <segue destination="vXZ-lx-hvc" kind="presentation" id="Ovh-sc-JGL"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="EvH-dJ-dsZ" id="A2T-mt-9O4"/>
                     </connections>
@@ -315,4 +310,7 @@
         <image name="Grid" width="30" height="30"/>
         <image name="Table" width="30" height="30"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="Ovh-sc-JGL"/>
+    </inferredMetricsTieBreakers>
 </document>
